Opened 4 years ago
Closed 6 months ago
#16706 closed bug (fixed)
THR: Test FAILED - conformance/interfaces/pthread_detach/4-1.test
Reported by: | cocobean | Owned by: | nobody |
---|---|---|---|
Priority: | normal | Milestone: | Unscheduled |
Component: | System/POSIX | Version: | R1/Development |
Keywords: | POSIX, pthreads, pthread_detach | Cc: | |
Blocked By: | Blocking: | ||
Platform: | All |
Description
Test that pthread_detach()
Upon failure, it shall return an error number:
-[EINVAL] The implemenation has detected that the value specified by 'thread' does not refer to a joinable thread.
-[ESRCH] No thread could be found corresponding to that thread. It shall not return an error code of [EINTR]
STEPS:
1.Create a detached state thread 2.Detach that thread 3.Check the return value and make sure it is EINVAL
Expected result: Test passed
Actual Result: Test failed. Incorrect error code
Tested on: Haiku hrev54815 x86 with Open POSIX Test Suite 1.5.2
Note:
See TracTickets
for help on using tickets.
Fixed in hrev58065.