pthread: Return EINVAL for pthread_detach() if the thread is already detached.

Fixes #16706.